docs(sweep): align documentation with the ADR-085 standards (#91)
* docs: land ADR-085 and the documentation standards set

Motivation: the standards that govern documentation across the ecosystem existed only as
working-tree files. ADR-085 makes them binding and `standards/` holds them, so every
reference to them from a merged file dangled.

Modification: commit the ADR and the fifteen standards files, each with the frontmatter
its own rules require. No content decision is made here; ADR-085 lands with its own
PROPOSED status intact. `.gitignore` keeps `standards/_*` out — those directories are
working material by the same convention that makes the validators skip them.

Result: `Refs: ADR-085` resolves and the sweep commits that follow have a normative basis
a reviewer can open.

Refs: ADR-085

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0129netpKTjLahmdFDiaV4Qs

* docs(sweep): bring the ADR records to the ADR-085 standard

Motivation: none of the platform-scope ADRs carried frontmatter, and the sweep found dead
references and superseded statements that no amendment had ever annotated — ADR-024 alone
named the kernel as the refusing party after its own 2026-06-17 amendment moved that role
out of the kernel, and cited a `KERNEL_TRANSPORT` identifier ADR-038 ratified out of
existence.

Modification: frontmatter on every record; dead references repaired against source
(`CitadelRepository` is gone from the SPI, Core and Community modules — the live contract
is `FlowSnapshotStore` with the `JdbcFlowSnapshotStore` binding); superseded statements
annotated in place following each file's own existing convention, never rewritten;
unartifacted figures given an explicit figure state. Decision text is untouched: no
`## Amendments` section was written, and every change of substance is recorded for a
maintainer instead.

Result: frontmatter passes on the ADR set, including the required-section check. VERIFY
m